servicemesh/99/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: training
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 8080
      targetPort: http
