servicemesh/99/frontend-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: training  
  name: frontend
spec:
  hosts:
      - "frontend.loodse.training"
  gateways:
    - gateway
  http:
    - route:
      - destination:
          host: frontend.training.svc.cluster.local
          subset: v1
        port:
          number: 8080
